--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.36.2",
+    "@types/next": "^9.0.0",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.8",
     "next": "14.2.3",
