--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-query-devtools": "^5.37.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^4.5.2"
   },
@@ -25,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
