--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tanstack/react-query-devtools": "^5.37.1",
     "@types/js-cookie": "^3.0.6",
     "@types/react-datepicker": "^6.2.0",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
+    "firebase": "^10.12.1",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
@@ -23,6 +25,7 @@
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "uuid": "^9.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
