--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
     "firebase": "^10.12.1",
+    "http-proxy-middleware": "^3.0.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
